 * H264 packetizer can now generate timestamps
 * Packetizers have support for captions in SEI
 * DTS packetizer handle DTS extensions (like DTS-HD): decoders like avcodec
 * can now decode up to 8 channels
 * JPEG images correctly oriented using embedded orientation tag, if present
 * Support VPX high bit depth support
 * Extend MicroDVD support with color, fontname, size, position extensions

Demuxers:
 * Support HD-DVD .evo (H.264, VC-1, MPEG-2, PCM, AC-3, E-AC3, MLP, DTS)
 * Support Opus in MPEG Transport Stream
 * Support Daala in Ogg
 * Important rework of the MP4 demuxer, including:
     * Support for fragmented MP4
     * Support EIA-608 subtitles in MP4/mov
     * Support WMV and WMAV in MP4/mov, aka Flip4Mac files
     * Support bitmap audio channel reordering in MP4/mov
     * Support for RTP Reception Hint Track with H.264, GSM and Speex payloads
     * Support for XiphQt(MP4) vorbis and Flac
     * Support for VP8/VP9/VP10 in MP4
     * Support GoPro HiLight chapters
 * Important rework of the TS demuxer, including:
    * Fixed program selection with recorded TS (TopField, DreamBox and others)
    * Fixed TS playback with PAT/PMT less recordings
    * Basic support for MPEG4-SL in TS and T-DMB
 * Support for lame's replaygain extension in mpeg files
 * Fixes for DTS detection in WAV and MKV files
 * Support for Creative ADPCM/alaw/ulaw/S16L in VOC files
 * Support for Creative ADPCM in AVI
 * Support WMV extended content metadata
 * Directory Demux can now sort items, ignore extensions and hidden files
 * Support SBV subtitles
 * Support AlbumArtist and DiscNumber metadata
 * Support SCTE-18 / EAS inside TS
 * Support raw h265/hevc files
 * Support multi-channel WAV without channel-maps
 * Rewrite MKV seeking
 * Support for TTML and WebVTT in ISOBMF/MP4 and DASH
 * Fix Quicktime Mp4 inside MKV and unpacketized VC1

Stream filter:
 * Added ADF stream filter
 * Added ARIB STD-B25 TS streams decoder
 * Added stream prebuffering plugin