@@ -397,6 +397,7 @@ $Id$
  * tcp: TCP Network access module
  * tdummy: dummy text renderer
  * telx: teletext subtitles decoder
+ * textst: HDMV text subtitles decoder
  * theora: a theora video decoder/packetizer/encoder using the libtheora
  * timecode: clock/timecode as a subtitle input
  * tizen_audio: audio output for Tizen
